# rebecca.apispec

./: LICENSE  README.md  constraints.txt  example.ini  noxfile.py  pyproject.toml  setup.cfg
.github/workflow/: python.yml
.github/workflows/: python.yml
example/: __init__.py  __main__.py  schema.py  views.py
rebecca/apispec/: __init__.py  directives.py  predicates.py  renderers.py  views.py
rebecca/apispec/cli/: dump.py
rebecca/apispec/static/redoc/: index.html
rebecca/apispec/static/swagger-ui-3.52.3/: index.html
tests/: test_it.py  test_predicates.py  test_renderers.py
