[metadata]
name = rebecca.apispec
author = Atushi Odagiri
author_email = aodagx@gmail.com
license = MIT

[options]
install_requires =
  pyramid
  apispec
  marshmallow
packages = find_namespace:

[options.extras_require]
dev =
  build
  flake8
  black
  waitress
testing =
  pytest
  pytest-randomly
  pytest-cov
