[metadata]
name = rebecca.apispec
author = Atushi Odagiri
author_email = aodagx@gmail.com
license = MIT
summary = An apispec extension for pyramid web framework.
url = https://github.com/rebeccaframework/rebecca.apispec
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  pyramid
  apispec
  marshmallow
packages = find_namespace:

[options.extras_require]
dev =
  build
  flake8
  black
  waitress
testing =
  pytest
  pytest-randomly
  pytest-cov
  webtest